# confluence-dc-mcp

./: .gitignore  README.md  pyproject.toml
config/: .env.example  settings.toml
scripts/: crawl.py
src/confluence_rag/: __init__.py  config.py  main.py
src/confluence_rag/api/: __init__.py  routes.py  schemas.py
src/confluence_rag/confluence/: __init__.py  client.py  crawler.py  models.py  permissions.py
src/confluence_rag/embedding/: __init__.py  chunking.py  client.py
src/confluence_rag/retrieval/: __init__.py  pipeline.py
src/confluence_rag/vectorstore/: qdrant.py
tests/: conftest.py  test_api.py  test_chunking.py  test_permissions.py  test_pipeline.py
