[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "confluence-rag"
version = "0.1.0"
description = "Confluence Data Center RAG bridge with permission-aware filtering"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135",
    "uvicorn[standard]>=0.41",
    "atlassian-python-api>=4.0",
    "httpx>=0.28",
    "qdrant-client>=1.17",
    "pydantic>=2.10",
    "pydantic-settings>=2.13",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "cachetools>=5.5",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "typer>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.9",
]

[project.scripts]
crawl = "scripts.crawl:app"

[tool.hatch.build.targets.wheel]
packages = ["src/confluence_rag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
